--- a/src/app/components/multiple-table/multiple-table.component.html
+++ b/src/app/components/multiple-table/multiple-table.component.html
@@ -15,6 +15,8 @@
     [metaKeySelection]="false"
     dataKey="id"
     [(selection)]="selectedRows"
+    [scrollable]="true"
+    [scrollHeight]="scrollHeight"
   >
     <ng-template pTemplate="header" let-columns>
       <tr style="visibility: collapse;">
@@ -52,7 +54,7 @@
     </ng-template>
     <ng-template pTemplate="body" let-rowData let-columns="columns">
       <tr  [pSelectableRow]="rowData">
-        <td *ngFor="let col of columns">
+        <td *ngFor="let col of columns" width="{{ col['width']? col['width']: 'auto'}}">
           {{rowData[col.field]}}
         </td>
       </tr>
