--- a/src/app/views/management/warehouse/warehouse.component.scss
+++ b/src/app/views/management/warehouse/warehouse.component.scss
@@ -114,24 +114,27 @@
   svg[data-icon="cart-plus"] {font-size: 1.7em;color: #007ad9;}
 
   .search {
-    background: #dedede;
-    padding: 20px;
-    border: 1px solid #ccc;
-    margin-bottom: 10px;
-    display: flex;
+      background: #dedede;
+      padding: 20px;
+      border: 1px solid #ccc;
+      margin-bottom: 10px;
+      display: flex;
 
-    p-chips {
-      .ui-inputtext {width: 100%}
-    }
-    input {
-      //width: 100% !important;
-    }
-    label {
-      margin: 0;
+      p-chips {
+        .ui-inputtext {width: 100%}
+      }
+      input {
+        //width: 100% !important;
+      }
+      label {
+        margin: 0;
 
-    }
-    p-calendar input {
-      width: 100px;
+      }
+      p-calendar input {
+        width: 100px;
+      }
+    .ui-inputtext {
+      padding: 2px;
     }
   }
 
